finalized everything no errors found

--- a/mystyle.css
+++ b/mystyle.css
@@ -1,10 +1,25 @@
 
+header {
+    font-size: 280%;
+    font-weight: bold;
+    color: white;
+    margin: 55px 0 0 0;
+
+}
+
+h4 {
+    color: white;
+}
+
+h3 {
+    font-size: 155%;
+}
+
 .opening-url {
               background-color: black;
-              color: red;
               text-decoration: underline;
-              display: flex;
-              align-items: flex-end;
+              height: 185px;
+
 
 }
 .opening {
@@ -12,8 +27,13 @@
           color:white;
 }
 
-.section {
+.urls {
+          display: flex;
+          flex-flow: row;
+          justify-content: space-around;
+          align-items: center;
           background-color: gray;
+          height: 40px;
 
 }
 
@@ -25,19 +45,61 @@
 
 }
 
-.aside {
-        border-color: black;
+.container {
+            display: flex;
+            flex-flow: row;
+            justify-content: space-around;
+
+}
+.container01 {
+              display: flex;
+              flex-flow: column;
+              margin: 15px;
+              width: 70%;
+}
+.container02 {
+                display: flex;
+                flex-flow: column;
+                align-items: center;
+                border-color: black;
+                border-width: thin;
+                border-style: inset;
+                height: 735px;
+                margin-top: 60px;
+                position: relative;
+
+
+        /* border-color: black;
+        border-width: thin;
         border-style: inset;
         display: flex;
+        flex-flow: column;
         position: relative;
-        justify-content: flex-end;
+        flex-wrap: wrap;
+        flex-direction: column; */
+
 
 }
 
 .photo-candy01 {
+                flex: 1;
+                flex-direction: column;
+                margin: 10px;
+
 
 }
 
 .photo-candy02 {
+                display: flex;
+                flex: 2;
+                flex-direction: column;
+                  align-items: flex-start;
+                  margin: 10px;
 
+}
+
+footer#footer {
+          background-color: black;
+          color: white;
+          height: 140px;
 }
